# TabPFN-Wide-dev

./: .gitignore  README.md  changes_for_v2.5.md  check_safe_globals.py  demo_attention_maps.py  demo_run_checkpoint.py  feature_grouping_nan.md  pyproject.toml  run_all_analysis.sh  tabpfn_wide_attention.ipynb  tabpfn_wide_example.ipynb  test_model.py  utils_mixed_widening.py
analysis/: analysis.sbatch  compare_results.sh  data.py  debug_openml.py  extract_multi_omics_attention.py  extract_widening_attention.py  grouping.sbatch  grouping_benchmark.py  hdlss_benchmark.py  load_mm_data.py  multiomics_feature_reduction.py  openml_benchmark.py  openml_widening.py  plot_results.py  run_analysis.sh  run_snp_analysis.sh  snp_benchmark.py  utils.py
analysis_results/: duplication_benchmark_results.csv  embedding_statistics.csv  grouping_benchmark_results.csv  masking_benchmark_results.csv
analysis_results/0_AddFeat1500_NEst1_Group1/: hdlss_benchmark_results.csv  multiomics_feature_reduction_results.csv  openml_benchmark_results.csv
analysis_results/0_AddFeat1500_NEst1_Group1_Warmup/: hdlss_benchmark_results.csv  multiomics_feature_reduction_results.csv  openml_benchmark_results.csv
analysis_results/0_AddFeat1500_NEst1_Group1_Warmup_nosub/: hdlss_benchmark_results.csv  openml_benchmark_results.csv
analysis_results/1_AddFeat5000_NEst1_Group1/: hdlss_benchmark_results.csv  (+2 more)
tabpfnwide/: __init__.py  classifier.py  data.py  patches.py
training/: init.sh  train.py  train.sh  training.sbatch  training_0.sbatch  training_05.sbatch  training_parser.py  utils.py
(+660 files in other folders)
